--- a/Day 03 - 18.03.2019/Q4/.project
+++ b/Day 03 - 18.03.2019/Q4/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Q4</name>
+	<name>Q4 - version 2</name>
 	<comment></comment>
 	<projects>
 	</projects>
